# unblink-engine

./: .env.example  ORB_WORKER_PROTOCOL.md  README.md  appdir.ts  engine.d.ts  index.ts  package.json  run.sh  shared.ts
py/: pyproject.toml  worker_caption_moondream.py  worker_embedding.py  worker_llm.py  worker_motion_energy.py  worker_object_detection.py  worker_sam3.py  worker_segmentation_image.py  worker_vlm.py  ws_client_handler.py
py/test/: fps_test_batch.py  test_moondream.py  test_sam3_batch.py  test_sam3_debug_labels.py  test_sam3_fps.py  test_sam3_fps_transformers.py  test_sam3_image.py  test_sam3_labels.py  test_sam3_labels_e2e.py  test_sam3_profile.py  test_sam3_streaming_multi.py  test_sam3_video.py  test_sam3_video_transformers.py  test_sam3_visualize.py  test_segmentation_image.py  test_segmentation_quick.py  test_siglip_embedding.py  test_transformers_v4_import.py  test_worker_embedding_manual.py  test_worker_manual.py  test_worker_sam3_manual.py  test_worker_vlm_manual.py
src/: handle_ws_message.ts  summary.ts  utils.test.ts  utils.ts
